# ALTAIR_DRONE

./: .gitignore  HANDOVER_CONTEXT.md  LICENSE  PROJECT_CONSTRAINTS.md  PROJECT_TASKS.md  README.md  actuator_bridge_node.cpp  cleanup_gpio.sh  debug_cs_spi1.py  debug_report.md  monitor_gpio.sh  pico_node.uf2  simple_main.c  test_actuator_spi.py  test_actuator_spi_hwcs.py  test_spi0.py  test_spi_speed.py  verify_actuator.py  verify_sensor_spi.py  verify_sensor_values.py  verify_simple_spi.py  verify_spi0_actuator.py  verify_spi1_sensor.py  walkthrough.md
software/RPi4_1_ws/src/actuator_bridge/: CMakeLists.txt  package.xml
software/RPi4_1_ws/src/actuator_bridge/src/: actuator_bridge_node.cpp  actuator_spi_node.cpp
software/RPi4_1_ws/src/altair_bringup/: CMakeLists.txt  package.xml
software/RPi4_1_ws/src/altair_bringup/launch/: bridge.launch.py
software/RPi4_1_ws/src/pico_bridge/: CMakeLists.txt  package.xml
software/RPi4_1_ws/src/pico_bridge/src/: pico_bridge_node.cpp
software/RPi4_1_ws/src/rpi4_1_bringup/: CMakeLists.txt  package.xml
software/RPi4_1_ws/src/rpi4_1_bringup/config/: ekf.yaml
software/RPi4_1_ws/src/rpi4_1_bringup/launch/: bridge.launch.py
software/RPi4_1_ws/src/rpi4_1_bringup/scripts/: hardware_test.py  setup_gpio.sh  spi_bridge.py  test_cs.py
software/RPi4_1_ws/src/rpi4_1_bringup/src/: notch_filter.hpp  spi_bridge.cpp
software/RPi4_1_ws/src/sensor_processing/: CMakeLists.txt  package.xml
software/RPi4_1_ws/src/sensor_processing/src/: imu_unpacker_node.cpp  mpu6050_ekf_node.cpp  notch_filter_node.cpp  sensor_processing_node.cpp
software/RPi4_2_ws/src/altair_controller/: CMakeLists.txt  README.md  package.xml
software/RPi4_2_ws/src/altair_controller/config/: motor_params.yaml
software/RPi4_2_ws/src/altair_controller/launch/: controller.launch.py
software/RPi4_2_ws/src/altair_controller/scripts/: generate_altair_nmpc.py  optimize_os.sh
software/RPi4_2_ws/src/altair_controller/src/: controller_node.cpp
software/Software/common/altair_description/: CMakeLists.txt  package.xml
software/Software/common/altair_description/urdf/: altair.urdf
software/firmware/pico_actuators/: CMakeLists.txt  pico_sdk_import.cmake
software/firmware/pico_actuators/build_pico2/: CMakeCache.txt
software/firmware/pico_actuators/build_pico2_clean/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  pico_actuators.dis  pico_actuators.elf  pico_actuators.elf.map  pico_actuators.hex  telemetry.pio.h
software/firmware/pico_actuators/build_pico2_clean/pico-sdk/: cmake_install.cmake
software/firmware/pico_actuators/build_pico2_clean/pioasm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  install_manifest.txt
software/firmware/pico_actuators/build_pico2_final/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  dshot.pio.h  pico_actuators.dis  pico_actuators.elf
software/firmware/pico_actuators/build_pico2_final/pico-sdk/: cmake_install.cmake
software/firmware/pico_actuators/build_pico2_final/pioasm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  install_manifest.txt
software/firmware/pico_actuators/src/: main.c  spi_slave_duplex.pio
software/firmware/pico_actuators/src/drivers/: bmp388.c  bmp388.h  dshot.c  dshot.h  dshot.pio  dshot_bidir.pio  ism330dhcx.c  ism330dhcx.h  mmc5983ma.c  mmc5983ma.h  uart_rx.pio  vl53l4cx.c  vl53l4cx.h
software/firmware/pico_sensors/: CMakeLists.txt  FreeRTOSConfig.h  bin_to_uf2.py  bmp388.cpp  bmp388.h  board_config.h  ism330.cpp  ism330.h  main.cpp  mmc5983.cpp  mmc5983.h  spi_slave.pio  vl53l4cx.cpp  vl53l4cx.h
software/firmware/pico_sensors/build_debug_pico2/: .ninja_deps  .ninja_log  CMakeCache.txt  blinky_rescue.dis  blinky_rescue.elf  blinky_rescue.elf.map  blinky_rescue.hex  cmake_install.cmake  pico_sensors.dis  pico_sensors.elf  pico_sensors.elf.map  pico_sensors.hex  pico_sensors_minimal.dis  pico_sensors_minimal.elf  pico_sensors_minimal.elf.map  pico_sensors_minimal.hex  pico_sensors_ram.dis  pico_sensors_ram.elf  pico_sensors_ram.elf.map  pico_sensors_ram.hex  pico_sensors_uros.dis  pico_sensors_uros.elf  pico_sensors_uros.elf.map  pico_sensors_uros.hex  pico_spi_diag.dis  pico_spi_diag.elf  pico_spi_diag.elf.map  pico_spi_diag.hex
software/firmware/pico_sensors/build_debug_pico2/pico-sdk/: cmake_install.cmake
software/firmware/pico_sensors/build_pico2/: .ninja_deps  .ninja_log  CMakeCache.txt  blinky_rescue.dis  blinky_rescue.elf  blinky_rescue.elf.map  blinky_rescue.hex  cmake_install.cmake  cs_test.dis  cs_test.elf  cs_test.elf.map  cs_test.hex  gpio_test.dis  gpio_test.elf  gpio_test.elf.map  gpio_test.hex  pico_sensors.dis  pico_sensors.elf  pico_sensors.elf.map  pico_sensors.hex  pico_sensors_bb.dis  pico_sensors_bb.elf  pico_sensors_bb.elf.map  pico_sensors_bb.hex  pico_sensors_minimal.dis  pico_sensors_minimal.elf  pico_sensors_minimal.elf.map  pico_sensors_minimal.hex  pico_sensors_ram.dis  pico_sensors_ram.elf  pico_sensors_ram.elf.map  pico_sensors_ram.hex  pico_sensors_simple.dis  pico_sensors_simple.elf  pico_sensors_simple.elf.map  pico_sensors_simple.hex  pico_sensors_uros.dis  pico_sensors_uros.elf  pico_sensors_uros.elf.map  pico_sensors_uros.hex  (+13 more)
software/firmware/pico_sensors/src/: blinky_rescue.c  gpio_test.c  main.c  main_dma.c  main_minimal.c  main_uros.c  pico_usb_transport.h  pin_sweep.c  spi_slave.pio
software/pico_firmware/: CMakeLists.txt  Task_pico.txt  build_firmware.ps1  build_log.txt
software/pico_firmware/build_simple/: CMakeCache.txt
software/pico_firmware/src/: FreeRTOSConfig.h  main.c  pico_node.c  pico_node.h  pico_node_full.c  pico_node_imu.c  pico_node_simple.c  pico_node_spi.c  pico_spi_diag.c  pico_uart_transports.c  pico_uart_transports.h  raw_main.c
software/pico_firmware/src/drivers/: bno055.c  bno055.h  mpu6050.c  mpu6050.h  telemetry.c  telemetry.h  telemetry.pio
software/temp_legacy_pico_firmware/pico_sensors_backup_20251226/: CMakeLists.txt
software/temp_legacy_pico_firmware/pico_sensors_backup_20251226/src/: main_dma.c  spi_slave.pio
(+557 files in other folders)
