<?xml version="1.0"?>
<package format="3">
  <name>altair_description</name>
  <version>0.0.1</version>
  <description>URDF Description package for ALTAIR Drone</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
